# w2v_API

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
src/: env.py  main.py  typings.py
