[tool.poetry]
name = "w2v_api"
version = "1.0.0"
license="MIT"
description = ""
authors = ["code-raisan <yuri@rainyan.net>"]

[tool.poetry.dependencies]
python = "^3.9"
gensim = "^4.3.1"
Cython = "^0.29.34"
fastapi = "^0.95.1"
uvicorn = {extras = ["standard"], version = "^0.22.0"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
